# gleb-currencyconverter

./: .gitignore  Dockerfile  README.md  READMI.md  app_architecture  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py  main.py
src/converter/: config.py  dependencies.py  router.py  schemas.py  utils.py
src/converter/services/: conversion.py  exceptions.py  validators.py
src/converter/services/enums/: exchangerate_response.py
