[tool.poetry]
name = "currencyconverter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
pydantic = "^2.9.1"
memoization = "^0.4.0"
uvicorn = "^0.30.6"
pydantic-settings = "^2.5.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
